# optitrack-depack

./: .gitignore  CMakeLists.txt  LICENSE  README.md  api.h  client.cc  client.h  depack.c  depack.cc  unityfuncs.cc  wire.h
UnityProject/Assets/: test.unity
UnityProject/Assets/Scripts/: NatNetClient.cs
UnityProject/ProjectSettings/: ProjectSettings.asset
